--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -20,7 +20,7 @@ const links = [
 ];
 ---
 
-<section class="p-[30px] w-full max-w-[1366px]">
+<section class="p-[30px] ml-auto mr-auto w-full max-w-[1366px]">
   <div class="px-[15px] bg-dark text-white lg:px-[60px]">
     <div
       class="p-[100px] h-[180px] flex md:flex-row w-full flex-col justify-around items-center"
