--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import "../styles/globals.css";
 ---
 
 <MainLayout
-  title="Kreativ Software"
-  description="Kreativ ofrece servicios de diseño y desarrollo de software"
+  title="Kreatif Software"
+  description="Kreatif ofrece servicios de diseño y desarrollo de software"
 >
   <div class="p-10">
     <Accordion />
