--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -8,6 +8,21 @@ const { ...props } = Astro.props;
 
 <html lang="en">
   <MainHead {...props} />
+  <style>
+    html.lenis {
+      height: auto;
+    }
+    .lenis.lenis-smooth {
+      scroll-behavior: auto;
+    }
+    .lenis.lenis-smooth [data-lenis-prevent] {
+      overscroll-behavior: contain;
+    }
+    .lenis.lenis-stopped {
+      overflow: hidden;
+    }
+  </style>
+  <script src="../utils/lenis"></script>
   <body>
     <main>
       <Navbar />
