--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Accordion from "../components/ui/Accordion.astro";
+import Section from "../components/ui/Section.astro";
 import SwiperSlider from "../components/ui/SwiperSlider.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import "../styles/globals.css";
@@ -9,13 +10,10 @@ import "../styles/globals.css";
   title="Kreatif Software"
   description="Kreatif ofrece servicios de diseño y desarrollo de software"
 >
-  <div class="p-10">
+  <section id="home" class="h-[1500px]"></section>
+  <Section id="about">
     <Accordion />
-  </div>
-  <div>
     <button class="btn-tertiary"> Primary Button </button>
-  </div>
-  <div class="p-10">
     <SwiperSlider />
-  </div>
+  </Section>
 </MainLayout>
