--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,33 +28,38 @@
     * {
       box-sizing: border-box;
       font-family: "Grotesk", sans-serif;
+      scroll-behavior: smooth;
     }
 
     body {
-      font-size: 16px;
+      font-size: 20px;
     }
 
     p {
-      font-size: 1.125rem;
+      font-size: 0.9rem;
     }
 
     h1 {
-      font-size: 3.75rem;
+      font-size: 3rem;
     }
 
     h2 {
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
 
     h3 {
-      font-size: 1.875rem;
+      font-size: 1.5rem;
     }
 
     h4 {
-      font-size: 1.25rem;
+      font-size: 1rem;
     }
 
     @media (max-width: 640px) {
+      body {
+        font-size: 16px;
+      }
+
       p {
         font-size: 1rem;
       }
@@ -79,15 +84,15 @@
 
   @layer components {
     .btn-primary {
-      @apply bg-dark text-white rounded-lg;
+      @apply bg-dark text-white rounded-lg px-[35px] py-5;
     }
 
     .btn-secondary {
-      @apply bg-transparent text-black rounded-lg border border-solid border-black;
+      @apply bg-transparent text-black px-[35px] py-5 rounded-lg border border-solid border-black;
     }
 
     .btn-tertiary {
-      @apply bg-green text-black rounded-lg;
+      @apply bg-green text-black rounded-lg px-[35px] py-5;
     }
 
     .greenhead {
