--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import "../styles/globals.css";
   title="Kreatif Software"
   description="Kreatif ofrece servicios de diseño y desarrollo de software"
 >
-  <section id="home" class="h-[1500px]"></section>
+  <section id="home" class="bg-green h-[1500px]"></section>
   <Section id="about">
     <Accordion />
     <button class="btn-tertiary"> Primary Button </button>
