--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
+import Section from "../components/sections/Section.astro";
 import Accordion from "../components/ui/Accordion.astro";
-import Section from "../components/ui/Section.astro";
 import SwiperSlider from "../components/ui/SwiperSlider.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import "../styles/globals.css";
