--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -3,7 +3,7 @@
 ---
 
 <section class="flex justify-center items-center h-screen bg-gray-200">
-  <form class="bg-white p-6 rounded shadow-md w-full max-w-md">
+  <form class="bg-white p-6 rounded shadow-md h-full w-full max-w-md">
     <div class="mb-4">
       <label for="name" class="block text-gray-700 mb-2">Name:</label>
       <input
