--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -4,11 +4,11 @@ const { isUnderline } = Astro.props;
 
 {
   isUnderline ? (
-    <div>
+    <div class="rounded-[45px] border border-dark shadow-[0px_5px_0px_#191a23]">
       <slot />
     </div>
   ) : (
-    <div>
+    <div class="rounded-[45px]">
       <slot />
     </div>
   )
