Services, Proposal. Finish Footer

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -15,7 +15,7 @@ import Section from "./Section.astro";
       <Image src={HeroIlust} alt="Hero Ilustration" />
     </picture>
     <div class="w-full lg:w-[66.5%]">
-      <p class="mb-[35px]">
+      <p class="my-[35px]">
         Our digital marketing agency helps businesses grow and succeed online
         through a range of services including SEO, PPC, social media marketing,
         and content creation.
