--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -4,7 +4,6 @@ import Facebook from "../../assets/facebook.svg";
 import Linkedin from "../../assets/linkedin.svg";
 import Logo from "../../assets/logo-alt.svg";
 import Twitter from "../../assets/twitter.svg";
-import Section from "../sections/Section.astro";
 import ShortForm from "../ui/ShortForm.astro";
 
 const logos = [
@@ -22,72 +21,78 @@ const links = [
 ];
 ---
 
-<Section>
-  <div
-    class="px-[15px] bg-dark text-white py-[55px] lg:px-[60px] rounded-t-[45px]"
-  >
-    <div>
-      <div class="flex flex-col lg:flex-row gap-7 items-center justify-between">
-        <picture>
-          <a href="#home">
-            <Image src={Logo} alt="Logo for Kreatif Brand" />
-          </a>
-        </picture>
-        <ul class="flex flex-col sm:flex-row gap-5">
-          {
-            links.map((link) => {
-              return (
-                <li class="text-center">
-                  <a class="underline" href={link.href}>
-                    {link.name}
-                  </a>
-                </li>
-              );
-            })
-          }
-        </ul>
-        <ul class="flex gap-5">
-          {
-            logos.map((logo) => {
-              return (
-                <li>
-                  <a href={logo.link} target="_blank">
-                    <picture>
-                      <Image src={logo.src} alt={logo.name} />
-                    </picture>
-                  </a>
-                </li>
-              );
-            })
-          }
-        </ul>
-      </div>
+<section class="sm:px-5">
+  <div class="w-full max-w-[1240px] mx-auto">
+    <div
+      class="px-[15px] bg-dark text-white py-[55px] lg:px-[60px] sm:rounded-t-[45px]"
+    >
+      <div>
+        <div
+          class="flex flex-col lg:flex-row gap-7 items-center justify-between"
+        >
+          <picture>
+            <a href="#home">
+              <Image src={Logo} alt="Logo for Kreatif Brand" />
+            </a>
+          </picture>
+          <ul class="flex flex-col sm:flex-row gap-5">
+            {
+              links.map((link) => {
+                return (
+                  <li class="text-center">
+                    <a class="underline" href={link.href}>
+                      {link.name}
+                    </a>
+                  </li>
+                );
+              })
+            }
+          </ul>
+          <ul class="flex gap-5">
+            {
+              logos.map((logo) => {
+                return (
+                  <li>
+                    <a href={logo.link} target="_blank">
+                      <picture>
+                        <Image src={logo.src} alt={logo.name} />
+                      </picture>
+                    </a>
+                  </li>
+                );
+              })
+            }
+          </ul>
+        </div>
 
-      <div class="flex flex-col lg:flex-row mt-[66px] mb-[51px]">
-        <div class="flex text-center lg:text-start flex-col w-full lg:w-[30%]">
-          <h3 class="mb-5">Contact us:</h3>
-          <div class="flex flex-col justify-between gap-4">
-            <span> Email: examplemail.com </span>
-            <span> Phone: +123 456 789 </span>
-            <span class="lg:w-3/4">
-              Address: 1234 Street Name, City Name, Country Name
-            </span>
+        <div class="flex flex-col lg:flex-row mt-[66px] mb-[51px]">
+          <div
+            class="flex text-center lg:text-start flex-col w-full lg:w-[30%]"
+          >
+            <h3 class="mb-5">Contact us:</h3>
+            <div class="flex flex-col justify-between gap-4">
+              <span> Email: examplemail.com </span>
+              <span> Phone: +123 456 789 </span>
+              <span class="lg:w-3/4">
+                Address: 1234 Street Name, City Name, Country Name
+              </span>
+            </div>
+          </div>
+          <div class="flex-grow my-10 lg:my-0 lg:ml-12">
+            <ShortForm />
           </div>
         </div>
-        <div class="flex-grow my-10 lg:my-0 lg:ml-12">
-          <ShortForm />
-        </div>
+      </div>
+
+      <div class="h-[1px] bg-white mb-5"></div>
+      <div
+        class="flex flex-col lg:flex-row h-20 justify-center mt-4 text-center md:justify-between md:mt-0"
+      >
+        <span>@2024 Positivus</span>&nbsp
+        <span>
+          <a href="/">Terms of use</a> & <a href="/">Privacy policy</a>
+        </span>
       </div>
     </div>
-
-    <div class="h-[1px] bg-white mb-5"></div>
-    <div
-      class="flex flex-col lg:flex-row h-20 justify-center mt-4 text-center md:justify-between md:mt-0"
-    >
-      <span>@2024 Positivus</span>&nbsp
-      <span>
-        <a href="/">Terms of use</a> & <a href="/">Privacy policy</a>
-      </span>
-    </div>
   </div>
-</Section>
+</section>
