--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Hero from "../components/sections/Hero.astro";
+import Proposal from "../components/sections/Proposal.astro";
 import Section from "../components/sections/Section.astro";
 import Services from "../components/sections/Services.astro";
 import Sponsors from "../components/sections/Sponsors.astro";
@@ -16,6 +17,7 @@ import "../styles/globals.css";
   <Hero />
   <Sponsors />
   <Services />
+  <Proposal />
   <Section id="about">
     <Accordion />
     <button class="btn-tertiary"> Primary Button </button>
