--- a/src/components/ui/ServiceCard.astro
+++ b/src/components/ui/ServiceCard.astro
@@ -11,26 +11,43 @@ import wob from "../../assets/icon7.svg";
 3. Black card with white title and white on black icon
 */
 
-const { index, title, img, alt, link } = Astro.props;
+const { index, titleTop, titleBottom, img, alt, link } = Astro.props;
 ---
 
 <Card isUnderline={true}>
   <div
-    class=`w-full h-full flex p-[50px] rounded-[45px] justify-between ${index === 1 ? 'bg-white' : index === 2 ? 'bg-green' : 'bg-dark text-white'}`
+    class=`h-[300px] w-full sm:h-full lg:gap-[60px] grid custom-grid lg:grid-cols-2 lg:grid-rows-1 p-8 sm:p-[50px] rounded-[45px] ${index === 1 ? 'bg-white' : index === 2 ? 'bg-green' : 'bg-dark text-white'}`
   >
-    <div class="w-1/2 flex flex-col justify-between">
-      <h3
-        class=`w-3/4 ${index === 1 ? 'greenhead' : index === 2 ? 'whitehead' : 'blackhead'}`
+    <h3 class=`flex flex-col col-span-2 lg:col-span-1`>
+      <span
+        class=`w-[fit-content] ${index === 1 ? 'greenhead' : index === 2 ? 'whitehead' : 'blackhead'}`
+        >{titleTop}</span
       >
-        {title}
-      </h3>
+      <span
+        class=`w-[fit-content] ${index === 1 ? 'greenhead' : index === 2 ? 'whitehead' : 'blackhead'}`
+        >{titleBottom}</span
+      >
+    </h3>
+    <picture
+      class="w-full h-full row-span-1 order-1 lg:order-none lg:row-span-2 flex justify-center items-center"
+    >
+      <Image
+        src={img}
+        alt={alt}
+        class="h-[100px] w-auto sm:h-auto sm:w-3/4 object-cover"
+      />
+    </picture>
+    <div class="flex items-end">
       <a href={link} class="flex items-center gap-3.5"
         ><Image src={index === 1 || index === 2 ? gob : wob} alt={alt} />
-        <span>Learn More</span></a
+        <span class="hidden sm:block">Learn More</span></a
       >
     </div>
-    <picture class="w-1/2 flex justify-center items-center">
-      <Image src={img} alt={alt} class="w-3/4 object-cover" />
-    </picture>
   </div>
 </Card>
+
+<style>
+  .custom-grid {
+    grid-template: auto auto;
+  }
+</style>
