Cases, Process, Heading Fix, Spacing Fix

--- a/src/components/sections/Section.astro
+++ b/src/components/sections/Section.astro
@@ -3,7 +3,7 @@ const { id } = Astro.props;
 ---
 
 <section id={id} class="px-5">
-  <div class="w-full max-w-[1240px] mx-auto">
+  <div class="w-full max-w-[1240px] lg:mx-auto">
     <slot />
   </div>
 </section>
