--- a/src/components/ui/SectionTitle.astro
+++ b/src/components/ui/SectionTitle.astro
@@ -3,7 +3,7 @@ const { sectionTitle, description } = Astro.props;
 ---
 
 <div class="flex flex-col items-center gap-10 mb-20 sm:flex-row">
-  <h2 class="greenhead">{sectionTitle}</h2>
+  <h2 class="greenhead text-center sm:text-left">{sectionTitle}</h2>
   <p class="w-auto text-center sm:text-left sm:w-[580px]">
     {description}
   </p>
